--- a/game.html
+++ b/game.html
@@ -40,6 +40,11 @@
         <h1 id="animals_count"> Animals: 0</h1>
         <img id="bullet" src="img/bullet.png" alt="bullet" width="50" height="50">
         <h2 id="n_bullets">X6</h2>
+
+        <div class ="progress-bar-container">
+            <label for ="progress.bar">LOADING ...</label>
+            <progress id="progress-bar" value="0" max="100"></progress>
+        </div>
         
     </div>
 </body>
