--- a/view.html
+++ b/view.html
@@ -37,6 +37,12 @@
         <button id="level1" class="level-button"> Level 1</button>
         <button id="level2" class="level-button"> Level 2</button>
     </div>
+
+    <div class ="progress-bar-container">
+        <label for ="progress.bar">LOADING ...</label>
+        <progress id="progress-bar" value="0" max="100"></progress>
+    </div>
+    
         
     </div>
 </body>
