Melhorias na tela de controlos

--- a/controls.html
+++ b/controls.html
@@ -9,7 +9,7 @@
 
     <title> Wild Gunslinger </title>
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <link rel="stylesheet" type="text/css" href="css/instructions.css">
+    <link rel="stylesheet" type="text/css" href="css/controls.css">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
@@ -20,15 +20,23 @@
 </head>
 
 <body>
-    <h1 Instructions>
-        <ul id="instructions">
+    <div id="controls"> 
+        <h4>Game Mode</h4>
+        <ul id=" Game-controls" >
             <li>Press A to move camera to the left</li>
             <li>Press D to move camera to the right</li>
             <li>Press E to grab the revolver</li>
             <li>Click on the left mouse button to shoot</li>
         </ul>
+
+        <h4>View Mode</h4>
+        <ul id="View-Controls" >
+            <li>Press R to activate/desactivate the camera's autorotate mode</li>
+            <li>Press the mouse's left button to rotate the scene</li>
+            <li>Use the scroll's mouse to zoom in/zoom out</li>
+        </ul>
    
-    </h1>
+    </div>
     <button id="back-button" onclick="location.href='index.html';">   <i class="fas fa-light fa-reply fa-8x"></i></button>
  
 </body>
