--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="buttons">
         <button id="playgame" onclick="location.href='game.html';">Play Game</button>
         <button id="View MAP" onclick="location.href='view.html';">View Map</button>
-        <button id="instructions" onclick="location.href='instructions.html';">Instructions</button>
+        <button id="controls" onclick="location.href='controls.html';">Controls</button>
     </div>
 
 </body>
