--- a/game.html
+++ b/game.html
@@ -40,6 +40,9 @@
         <h1 id="animals_count"> Animals: 0</h1>
         <img id="bullet" src="img/bullet.png" alt="bullet" width="50" height="50">
         <h2 id="n_bullets">X6</h2>
+        
+        <h1 id="timer">30s</h1>
+        <h1 id="clock"><i class="fas fa-regular fa-clock fa-1.6x"></i> </h1>
 
         <div class ="progress-bar-container">
             <label for ="progress.bar">LOADING ...</label>
