--- a/view.html
+++ b/view.html
@@ -36,6 +36,7 @@
     <div id= "level-buttons">
         <button id="level1" class="level-button"> Level 1</button>
         <button id="level2" class="level-button"> Level 2</button>
+        <button id="level3" class="level-button"> Level 3</button>
     </div>
     
     
