CheatCode para passar para o último nível

--- a/controls.html
+++ b/controls.html
@@ -26,6 +26,7 @@
             <li>Press A to move camera to the left</li>
             <li>Press D to move camera to the right</li>
             <li>Press E to grab the revolver</li>
+            <li>Press N to switch between day or night</li>
             <li>Click on the left mouse button to shoot</li>
         </ul>
 
