Criação do nível 4

--- a/view.html
+++ b/view.html
@@ -37,6 +37,7 @@
         <button id="level1" class="level-button"> Level 1</button>
         <button id="level2" class="level-button"> Level 2</button>
         <button id="level3" class="level-button"> Level 3</button>
+        <button id="level4" class="level-button"> Level 4</button>
     </div>
     
     
