Chuva e neve no modo jogo e texto avisar se um cheatcode foi usado

--- a/controls.html
+++ b/controls.html
@@ -27,7 +27,9 @@
             <li>Press D to move camera to the right</li>
             <li>Press E to grab the revolver</li>
             <li>Press N to switch between day or night</li>
+            <li> Press R to start/stop the rain (only works in level 2 and 3)</li>
             <li>Click on the left mouse button to shoot</li>
+           
         </ul>
 
         <h4>View Mode</h4>
@@ -35,6 +37,9 @@
             <li>Press R to activate/desactivate the camera's autorotate mode</li>
             <li>Press the mouse's left button to rotate the scene</li>
             <li>Use the scroll's mouse to zoom in/zoom out</li>
+            <li>Press the button bellow the moon to switch between day or night</li>
+            <li> Press the button bellow the cloud to start/stop the rain (only apeears when viewing level 2 and level 3)</li>
+        
         </ul>
    
     </div>
