--- a/game.html
+++ b/game.html
@@ -41,7 +41,7 @@
         <h1 id="Health"> Health: 100</h1>
 
         <h1 id="targets_count"> Animals: 0</h1>
-        <img id="bullet" src="img/bullet.png" alt="bullet" width="50" height="50">
+        <img id="bullet" src="assets/img/bullet.png" alt="bullet" width="50" height="50">
         <h2 id="n_bullets">X6</h2>
         
         <h1 id="timer">30s</h1>
