--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title> Wild Gunslinger </title>
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-  
-
- 
-
 </head>
 
 <body>
